--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
 		<!--fonts-->
 		<link
-			href="https://fonts.googleapis.com/css?family=Roboto:400,500,700|Space+Mono:400,700&display=swap"
+			href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700|Space+Mono:400,700&display=swap"
 			rel="stylesheet"
 		/>
 		<!--
